src/test/deca/context/valid/provided/protected.deca
class A{
    protected int a;
    int z = this.a;
}
{
    A elem = new A();
}