src/test/deca/context/invalid/provided/class.deca
class A{
    
    int a(int b){
        if (true==false)
        {
            
        }
    }

    

}


class B extends A{
    int a(int x){
        int b;
    }
}